added li ul frukt

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <img src="./img/krabbe.jpeg" alt="En gave fra Gautes mor" width="240">
     <h1>cf</h1>
     <p>test nettside</p>
+    <ul>
+        <li>epler pærer</li>
+        <li>bananer druer</li>
+    </ul>
 </body>
 </html>
